make title sentence case

--- a/content/publication/jackson-16-srrna-gene-2021/cite.bib
+++ b/content/publication/jackson-16-srrna-gene-2021/cite.bib
@@ -6,7 +6,7 @@
  journal = {Polar Biology},
  language = {en},
  month = {March},
- title = {16S rRNA Gene and 18S rRNA Gene Diversity in Microbial Mat Communities in Meltwater Ponds on the McMurdo Ice Shelf, Antarctica},
+ title = {16S rRNA gene and 18S rRNA gene diversity in microbial mat communities in meltwater ponds on the McMurdo Ice Shelf, Antarctica},
  year = {2021}
 }
 
